// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testing snapshot for actions-stackadapt-audiences destination: forwardAudienceEvent action - all fields 1`] = `
{
  "query": "mutation {
      upsertProfiles(
        input: {
          advertiserId: 84GW[vK%wv2xv@UF5iy,
          externalProvider: "segment_io",
          syncId: "7bcb527cec5517b1155595cd74dc96b6db6ed1d0c54b91ebe04297f3524bd775",
          profiles: "[{\\"userId\\":\\"84GW[vK%wv2xv@UF5iy\\",\\"audienceId\\":\\"84GW[vK%wv2xv@UF5iy\\",\\"audienceName\\":\\"84GW[vK%wv2xv@UF5iy\\",\\"action\\":\\"exit\\"}]"
        }
      ) {
        userErrors {
          message
        }
      }
      upsertProfileMapping(
        input: {
          advertiserId: 84GW[vK%wv2xv@UF5iy,
          mappingSchemaV2: [{incomingKey:"userId",destinationKey:"external_id",type:STRING,isPii:false,label:"External Profile ID"}],
          mappableType: "segment_io"
        }
      ) {
        userErrors {
          message
        }
      }
      upsertExternalAudienceMapping(
        input: {
          advertiserId: 84GW[vK%wv2xv@UF5iy,
          mappingSchema: [{incomingKey:"audienceId",destinationKey:"external_id",type:STRING,label:"External Audience ID",isPii:false},{incomingKey:"audienceName",destinationKey:"name",type:STRING,label:"External Audience Name",isPii:false}],
          mappableType: "segment_io"
        }
      ) {
        userErrors {
          message
        }
      }
    }",
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: forwardAudienceEvent action - required fields 1`] = `
{
  "query": "mutation {
      upsertProfiles(
        input: {
          advertiserId: 84GW[vK%wv2xv@UF5iy,
          externalProvider: "segment_io",
          syncId: "7bcb527cec5517b1155595cd74dc96b6db6ed1d0c54b91ebe04297f3524bd775",
          profiles: "[{\\"userId\\":\\"84GW[vK%wv2xv@UF5iy\\",\\"audienceId\\":\\"84GW[vK%wv2xv@UF5iy\\",\\"audienceName\\":\\"84GW[vK%wv2xv@UF5iy\\",\\"action\\":\\"exit\\"}]"
        }
      ) {
        userErrors {
          message
        }
      }
      upsertProfileMapping(
        input: {
          advertiserId: 84GW[vK%wv2xv@UF5iy,
          mappingSchemaV2: [{incomingKey:"userId",destinationKey:"external_id",type:STRING,isPii:false,label:"External Profile ID"}],
          mappableType: "segment_io"
        }
      ) {
        userErrors {
          message
        }
      }
      upsertExternalAudienceMapping(
        input: {
          advertiserId: 84GW[vK%wv2xv@UF5iy,
          mappingSchema: [{incomingKey:"audienceId",destinationKey:"external_id",type:STRING,label:"External Audience ID",isPii:false},{incomingKey:"audienceName",destinationKey:"name",type:STRING,label:"External Audience Name",isPii:false}],
          mappableType: "segment_io"
        }
      ) {
        userErrors {
          message
        }
      }
    }",
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: forwardProfile action - all fields 1`] = `
{
  "query": "mutation {
      upsertProfiles(
        input: {
          advertiserId: PsAwlRv%,
          externalProvider: "segment_io",
          syncId: "20cec16a9def9d98e9fe77029f7c5341712518bc9f4e01e85430dd3d0ab493dc",
          profiles: "[{\\"userId\\":\\"PsAwlRv%\\",\\"email\\":\\"zobbufpop@usliz.mh\\",\\"firstName\\":\\"PsAwlRv%\\",\\"lastName\\":\\"PsAwlRv%\\",\\"phone\\":\\"PsAwlRv%\\",\\"marketingStatus\\":\\"PsAwlRv%\\",\\"address\\":\\"PsAwlRv%\\",\\"city\\":\\"PsAwlRv%\\",\\"state\\":\\"PsAwlRv%\\",\\"country\\":\\"PsAwlRv%\\",\\"postalCode\\":\\"PsAwlRv%\\",\\"timezone\\":\\"PsAwlRv%\\",\\"birthDay\\":null,\\"birthMonth\\":null}]"
        }
      ) {
        userErrors {
          message
        }
      }
      upsertProfileMapping(
        input: {
          advertiserId: PsAwlRv%,
          mappingSchemaV2: [{incomingKey:"userId",destinationKey:"external_id",label:"User ID",type:STRING,isPii:false},{incomingKey:"email",destinationKey:"email",label:"Email",type:STRING,isPii:true},{incomingKey:"firstName",destinationKey:"first_name",label:"First Name",type:STRING,isPii:true},{incomingKey:"lastName",destinationKey:"last_name",label:"Last Name",type:STRING,isPii:true},{incomingKey:"phone",destinationKey:"phone",label:"Phone",type:STRING,isPii:true},{incomingKey:"marketingStatus",destinationKey:"marketing_status",label:"Email Marketing Status",type:STRING,isPii:false},{incomingKey:"address",destinationKey:"address",label:"Address",type:STRING,isPii:true},{incomingKey:"city",destinationKey:"city",label:"City",type:STRING,isPii:false},{incomingKey:"state",destinationKey:"state",label:"State",type:STRING,isPii:false},{incomingKey:"country",destinationKey:"country",label:"Country",type:STRING,isPii:false},{incomingKey:"postalCode",destinationKey:"postal_code",label:"Postal Code",type:STRING,isPii:false},{incomingKey:"timezone",destinationKey:"timezone",label:"Timezone",type:STRING,isPii:false},{incomingKey:"birthDay",destinationKey:"birth_day",label:"Birth Day",type:NUMBER,isPii:false},{incomingKey:"birthMonth",destinationKey:"birth_month",label:"Birth Month",type:NUMBER,isPii:false},{incomingKey:"birthday",destinationKey:"birth_date",label:"Birthday",type:STRING,isPii:true}],
          mappableType: "segment_io"
        }
      ) {
        userErrors {
          message
        }
      }
    }",
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: forwardProfile action - required fields 1`] = `"No responses received"`;
